gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-abi_unadjusted.rs
extern "unadjusted" fn foo() {
// { dg-error ".E0658." "" { target *-*-* } .-1 }
}

fn main() {
    foo();
}

